# AutoResume

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  FIXES.md  QUICKSTART.md  QUICK_START.md  README.md  START_HERE.md  TEST_RESULTS.md  UV_MIGRATION_COMPLETE.md  UV_SETUP.md  WORKFLOW_GUIDE.md  main.py  pyproject.toml  run.bat  test_agent.py
.claude/: .nfs000000000e43f28c00002d54  settings.local.json
autoresume/: __init__.py  cli.py  orchestrator.py
autoresume/agents/: __init__.py  conversational.py  judge.py  tailoring.py
autoresume/memory/: __init__.py  user_profiles.py
autoresume/tools/: __init__.py  file_ops.py  latex_parser.py
demo/: demo.cast
examples/: cv_baseline.tex  sample_job_url.txt  sample_resume.tex
real_user/apple_clinical_analyst/: job_url_20260207.txt
real_user/edda_research_scientist/: url.txt
real_user/edda_research_scientist/edda_technology_ai_research_scientist_--_medical_applications/: changes.diff  judge_feedback.txt  resume.cls  resume_tailored.tex
src/: __init__.py
src/agent/: __init__.py  prompts.py  resume_agent.py
src/tools/: __init__.py  job_fetcher.py
src/utils/: user_profiles.py
