[project]
name = "autoresume"
version = "0.1.0"
description = "LangChain agent for intelligent resume modification and cover letter generation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
autoresume = "main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"
